[package]
name = "g-takeout-processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version="0.4.23", features = ["serde"] }
fuzzywuzzy = "0.0.2"
rayon = "1.6.1"
sha3 = "0.10.6"

tokio = { version = "1", features = ["full"] }
futures = "0.3.26"
serde_json = "1.0.93"
filetime = "0.2.20"

[workspace]
members = [
    "gdog"
]

