[package]
name = "gdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
g-takeout-processor={path="../"}
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1

